WIP: work on making state serializable
this breask everything, so [skip ci]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_BASE} -O3 -DNDEBUG ${CMAKE_CXX_FLAGS_MATH
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_BASE} -O3 -DNDEBUG ${CMAKE_CXX_FLAGS_MATHOPT}")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_BASE} -DDEBUG_MODE")
 
+# give our include dirs the most precedent
+include_directories(include)
+
+# followed by the EXTRA_* ones
 if(DEFINED EXTRA_INCLUDE_PATH)
   include_directories(${EXTRA_INCLUDE_PATH})
 endif()
@@ -27,9 +31,8 @@ if(DEFINED EXTRA_LIBRARY_PATH)
 endif()
 
 find_package(Protobuf REQUIRED)
-message(STATUS "found protobuf INC=${PROTOBUF_INCLUDE_DIRS}, LIB=${PROTOBUF_LIBRARY_DIRS}")
+message(STATUS "found protobuf INC=${PROTOBUF_INCLUDE_DIRS}, LIB=${PROTOBUF_LIBRARIES}")
 include_directories(${PROTOBUF_INCLUDE_DIRS})
-link_directories(${PROTOBUF_LIBRARY_DIRS})
 
 find_package(Distributions)
 if(DISTRIBUTIONS_FOUND)
@@ -49,17 +52,16 @@ else()
   message(FATAL_ERROR "Could not find microscopes_common")
 endif()
 
-include_directories(include)
 install(DIRECTORY include/ DESTINATION include FILES_MATCHING PATTERN "*.h*")
 install(DIRECTORY microscopes DESTINATION cython FILES_MATCHING PATTERN "*.pxd" PATTERN "__init__.py")
 
 set(MICROSCOPES_MIXTUREMODEL_SOURCE_FILES src/mixture/model.cpp)
 add_library(microscopes_mixturemodel SHARED ${MICROSCOPES_MIXTUREMODEL_SOURCE_FILES})
-target_link_libraries(microscopes_mixturemodel protobuf distributions_shared microscopes_common)
+target_link_libraries(microscopes_mixturemodel ${PROTOBUF_LIBRARIES} distributions_shared microscopes_common)
 install(TARGETS microscopes_mixturemodel LIBRARY DESTINATION lib)
 
 # test executables
 enable_testing()
 add_executable(test_state test/cxx/test_state.cpp)
 add_test(test_state test_state)
-target_link_libraries(test_state protobuf distributions_shared microscopes_common microscopes_mixturemodel)
+target_link_libraries(test_state ${PROTOBUF_LIBRARIES} distributions_shared microscopes_common microscopes_mixturemodel)
