--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ if(APPLE)
 endif()
 
 # taken from distributions
-set(CMAKE_CXX_FLAGS_MATHOPT "-mfpmath=sse -msse4.1 -ffast-math -funsafe-math-optimizations")
+#set(CMAKE_CXX_FLAGS_MATHOPT "-mfpmath=sse -msse4.1 -ffast-math -funsafe-math-optimizations")
+set(CMAKE_CXX_FLAGS_MATHOPT "-mfpmath=sse -msse4.1")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG ${CMAKE_CXX_FLAGS_MATHOPT}")
 set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG_MODE")
 
