--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
-  - "2.7"
+  - '2.7'
 notifications:
   email: false
-
+  slack:
+    secure: anarcS6pLZCyB1g0RvtSM+6XD1wr1dbzUj2UeiXABCBniuGy5oYcVwze/M6VCDMmZe/G8035qfRn4ScpPJuZz2VawcGixhxK5oItXdfe0XyY8DY794cj4JFefekzEptN39c4Rr4fdFXReaXVykAJNKvJy0p2xZ/531+HHB6EieI=
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
@@ -13,8 +14,6 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda/bin:$PATH
   - conda update --yes conda
-  # The next couple lines fix a crash with multiprocessing on Travis and are
-  # not specific to using Miniconda
   - sudo rm -rf /dev/shm
   - sudo ln -s /run/shm /dev/shm
   - conda create -n build --yes python=$TRAVIS_PYTHON_VERSION numpy scipy nose cython pip scikit-learn
@@ -24,9 +23,7 @@ before_install:
   - export CC=gcc-4.8
   - export CXX=g++-4.8
   - printenv
-  - mkdir .travis 
+  - mkdir .travis
   - (cd .travis && git clone https://github.com/datamicroscopes/common.git && cd common && make travis_install)
-
-install: make travis_install 
-
+install: make travis_install
 script: make travis_script
