--- a/conda/microscopes-mixturemodel/meta.yaml
+++ b/conda/microscopes-mixturemodel/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: "0.1.0"
 
 source:
-  git_url: git@github.com:datamicroscopes/mixturemodel.git
+  git_url: https://github.com/datamicroscopes/mixturemodel.git
 
 requirements:
   build:
