--- a/conda/microscopes-mixturemodel/meta.yaml
+++ b/conda/microscopes-mixturemodel/meta.yaml
@@ -26,8 +26,7 @@ requirements:
 
 test:
   imports:
-    - microscopes.py.mixture
-    - microscopes.cxx.mixture
+    - microscopes.mixture
 
 about:
   home: https://github.com/datamicroscopes/mixturemodel
