try more imports [skip ci]

--- a/conda/microscopes-mixturemodel/meta.yaml
+++ b/conda/microscopes-mixturemodel/meta.yaml
@@ -27,6 +27,8 @@ requirements:
 test:
   imports:
     - microscopes.mixture
+    - microscopes.mixture.definition
+    - microscopes.mixture.model
 
 about:
   home: https://github.com/datamicroscopes/mixturemodel
