install the (new) kernels dependency for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,6 @@ before_install:
   - printenv
   - mkdir .travis
   - (cd .travis && git clone https://github.com/datamicroscopes/common.git && cd common && make travis_install)
+  - (cd .travis && git clone https://github.com/datamicroscopes/kernels.git && cd kernels && make travis_install)
 install: make travis_install
 script: make travis_script
